@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2009-09-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/msl.c, doc/conjure.imdoc: Add support for a new 'profile'
+        command in MSL/conjure which applies, adds, or removes one or more
+        IPTC, ICC or generic profiles from a file.  Work contributed by
+        John Sergeant.
+
+</UL>
+<p>
 2009-09-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
